# panko

./: Cargo.toml  FRICTION_LOG.md  README.md  crust.toml  justfile
.claude/skills/: diffium-comments.md  panko-comments.md  rev-comments.md  revium-comments.md  revs-comments.md
src/: app.rs  keymap.rs  main.rs  search.rs
src/adapters/: crossterm_adapter.rs  git2_adapter.rs  jj_adapter.rs  mod.rs  notify_file_watcher.rs  sqlite_state_store.rs
src/domain/: branch_preview.rs  mod.rs  types.rs
src/ports/: file_watcher.rs  git.rs  mod.rs  state_store.rs  terminal.rs
src/ui/: commits.rs  diff.rs  diff_view.rs  file_tree.rs  help.rs  layout.rs  mod.rs  styles.rs  syntax.rs  theme.rs
