[package]
name = "panko"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
two-face = "0.4"
syntect = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
unicode-width = "0.2"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
dirs = "5"
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1"
